Fixed horizontal scrolling on small devices

--- a/src/routes/blog/style.scss
+++ b/src/routes/blog/style.scss
@@ -4,9 +4,6 @@
 
 .blogcontainer {
 	max-width: 728px;
-	width: 100%;
-	margin: 0 auto 10em;
-	line-height: 1.6rem;
 }
 
 .blogtitle {
